Assets/Msdk/Editor/Librarys/iOS3.2/MSDKAdapter/MSDKAdapter.framework/Headers/iOSConnector.h

    
    extern char* GetLoginRecord();
    extern void Login(int platform);
    extern void ChannelPermissionAuth(int platform, unsigned char * permissions);
    extern int LoginOpt(int platform,int overtime);
    extern void WGQrCodeLogin(int platform);
   extern void WGCheckWXUniversalLink();
    extern bool Logout();
    extern void SetPermission(int permissions);
    extern void SendToWeixin(
                                  char* title,
                                  char* desc,
                                  char* mediaTagName,
                                  Byte* thumbImgData,
                                  int thumbImgDataLen,
                                  char* messageExt,
                                  char *userOpenId = (char  *)""
                                  );
    extern void SendToWeixinWithUrl(
                                         int scene,
                                         char* title,
                                         char* desc,
                                         char* url,
                                         char* mediaTagName,
                                         Byte* thumbImgData,
                                         int thumbImgDataLen,
                                         char* messageExt,
                                         char *userOpenId = (char *)""
                                         );
    extern void SendToWXNativeGamePage(int scene,
                                unsigned char *title,
                                unsigned char *desc,
                                unsigned char *mediaTagName,
                                unsigned char *thumbImgData,
                                int thumbImgDataLen,
                                bool isVideo,
                                int videoDuration,
                                unsigned char *shareData,
                                unsigned char *messageExt,
                                unsigned char *messageAction,
                                unsigned char *userOpenId = (unsigned char *)""
                                );
    extern void SendToWeixinWithPhoto(
                                                     int scene,
                                                     char *mediaTagName,
                                                     Byte *imgData,
                                                     int imgDataLen,
                                                     char *messageExt,
                                                     char *messageAction
                                                     );
    extern void SendToWXWithMiniApp(int scene,
                             unsigned char *title,
                             unsigned char *desc,
                             unsigned char *thumbImgData,
                             int thumbImgDataLen,
                             unsigned char *webpageUrl,
                             unsigned char *userName,
                             unsigned char *path,
                             bool withShareTicket,
                             unsigned char *messageExt,
                             unsigned char *messageAction,
                             const unsigned char *mediaTagName = (const unsigned char *)"",
                             int type = 0,
                             const unsigned char *userOpenId  = (const unsigned char *)"");
    extern void LaunchMiniApp(const unsigned char *userName,
                         const unsigned char *path,
                         int type
                            );
    void WGSendToWXGameLive(int scene, unsigned char *title, unsigned char *desc, unsigned char *messageExt, char *extInfo);
    extern void SendToWeixinWithVideo(int scene,
                               unsigned char *title,
                               unsigned char *desc,
                               unsigned char *ios_videoData,
                               int ios_videoDataLen,
                               unsigned char *mediaTagName,
                               unsigned char *messageAction,
                               unsigned char *messageExt);
    extern void SendToWXStateWithPhoto(const unsigned char *stateId,
                                       const unsigned char *stateTitle,
                                       const unsigned char *imageData,
                                       const int imageDataLen,
                                       const unsigned char *jumpUrl);
    extern void SendToWXStateWithPhotoOpenMiniApp(const unsigned char*stateId,
                                            const unsigned char*stateTitle, 
                                            const unsigned char* imageData, 
                                            const int imageDataLen, 
                                            const unsigned char* userName, 
                                            const unsigned char* path, 
                                            const int type);
    extern void SendToWXChannelShareVideo(const unsigned char *localIdentify, const unsigned char *messageExt);
    extern void SendToWXChannelStartLive(unsigned char * channelLiveJson, unsigned char * messageExt);
    extern void FeedbackWithBody(char* body);
    extern void EnableCrashReport(bool bRDMEnable, bool bMTAEnable);
    extern void ReportEvent(char *name, char *eventList, bool isRealTime);
    void OpenMSDKLog(bool enabled);
    extern char* GetVersion();
    extern char* GetChannelId();
    extern char* GetPlatformAPPVersion(int platform);
    extern char* GetRegisterChannelId();
    extern void RefreshWXToken();
    extern bool IsPlatformInstalled(int platformType);
    extern char* GetPfKey();
    extern void LogPlatformSDKVersion();
    extern bool QueryQQMyInfo();
    extern bool QueryQQGameFriendsInfo();
    extern bool QueryWXMyInfo();
    extern bool QueryWXGameFriendsInfo();
    extern void CreateWXGroup(
                         unsigned char* unionid,
                         unsigned char* chatRoomName,
                         unsigned char* chatRoomNickName
                         );
    extern void JoinWXGroup(
                       unsigned char* unionid,
                       unsigned char* chatRoomNickName
                       );
    extern void QueryWXGroupInfo(
                            unsigned char* unionID,
                            unsigned char* openIdLists
                            );
    extern void SendToWXGroup(
                         int msgType,
                         int subType,
                         unsigned char* unionID,
                         unsigned char* title,
                         unsigned char* desc,
                         unsigned char* messageExt,
                         unsigned char* mediaTagName,
                         unsigned char* imgUrl,
                         unsigned char* msdkExtInfo
                         );
    extern void OpenWeiXinDeeplink(unsigned char* link);
    extern bool SendToQQGameFriend(
                                                   int act,
                                                   char* fopenid,
                                                   char *title,
                                                   char *summary,
                                                   char *targetUrl,
                                                   char *imgUrl,
                                                   char* previewText,
                                                   char* gameTag,
                                                   char* msdkExtInfo
                                                   );
    extern bool SendToWXGameFriend(
                                                   char* fOpenId,
                                                   char* title,
                                                   char* description,
                                                   char* mediaId,
                                                   char* messageExt,
                                                   char* mediaTagName,
                                                   char* msdkExtInfo
                                                   );
    extern void LoginWithLocalInfo();
    extern void ShowNotice(char* scene);
    extern void HideScrollNotice();
    extern void OpenUrl(char* openUrl, const char *algorithm = "v2");
    extern void OpenUrlWithScreenDir(unsigned char * openUrl, int screenDir, const char *algorithm = "v2");
    extern void OpenUrlWithScreenDirAndFullScreen(unsigned char * openUrl, int screenDir, bool fullScreen, const char *algorithm = "v2");
    extern char* GetEncodeUrl(unsigned char * openUrl, const char *algorithm = "v2");
    extern char* GetNoticeData(char* scene);
    extern void OpenAmsCenter(unsigned char *gameName,
                              unsigned char *actChannelId,
                              unsigned char *zoneId,
                              unsigned char *platformId,
                              unsigned char *partitionId,
                              unsigned char *roleId,
                              unsigned char *extra,
                              int screenDir);
    extern void GetNearbyPersonInfo();
    extern bool CleanLocation();
    extern bool GetLocationInfo();
    extern bool SendMessageToWechatGameCenter(
                                                   char* fOpenid,
                                                   char* title,
                                                   char* content,
                                                   char* pTypeInfo,
                                                   char* pButtonInfo,
                                                   char* msdkExtInfo
                                                   );
    extern void SendToWeixinWithMusic(
                                           int scene,
                                           char* title,
                                           char* desc,
                                           char* musicUrl,
                                           char* musicDataUrl,
                                           char* mediaTagName,
                                           Byte* imgData,
                                           int imgDataLen,
                                           char* messageExt,
                                           char* messageAction
                                           );
    extern void SendToQQWithMusic(
                                       int scene,
                                       char* title,
                                       char* desc,
                                       char* musicUrl,
                                       char* musicDataUrl,
                                       char* imgUrl
                                       );
    extern void SendToQQWithCommonShare(unsigned char *serviceID, unsigned char *extraJson);
    extern bool SwitchUser(bool flag);
    extern void SendToQQ(
                              int scene,
                              char* title,
                              char* desc,
                              char* url,
                              Byte* imgData,
                              int imgDataLen,
                              char* messageExt,
                              char* gameTag
                              );
    extern void SendToQQWithPhoto(
                                       int scene,
                                       Byte* imgData,
                                       int imgDataLen
                                       );
    extern void SendToQQWithPhotoWithParams(
                           int scene,
                           Byte* imgData,
                           int imgDataLen,
                           const unsigned char *extraScene,
                           const unsigned char *messageExt,
                           const unsigned char *gameTag
                           );
    extern char* GetPf();
    extern int GetPaytokenValidTime();
    extern void AddGameFriendToQQ(
                                       char* cFopenid,
                                       char* cDesc,
                                       char* cMessage);
    extern char* GetGuestID();
    extern void ResetGuestID();
    extern void StartGameStatus(unsigned char* cGameStatus);
    extern void EndGameStatus(unsigned char* cGameStatus, int succ, int errorCode);
    extern long AddLocalNotification(char* localMessage);
    extern long AddLocalNotificationAtFront(char* localMessage);
    extern void ClearLocalNotification(char* localMessage);
    extern void ClearLocalNotifications();
    extern void SetPushTag(char* tag);
    extern void DeletePushTag(char* tag);
    extern void RealNameAuth(char* authInfo);
    extern void LogPlatformSDKVersion();  
    extern void SetPushAccount(char* account);
    extern void DeletePushAccount(char* account);
    extern void UnregisterPush();